[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Pixel Adventure 1/Free/Main Characters/Virtual Guy/Idle (32x32).png" type="Texture" id=2]
[ext_resource path="res://Pixel Adventure 1/Free/Main Characters/Virtual Guy/Jump (32x32).png" type="Texture" id=3]
[ext_resource path="res://Pixel Adventure 1/Free/Main Characters/Virtual Guy/Run (32x32).png" type="Texture" id=4]
[ext_resource path="res://Pixel Adventure 1/Free/Main Characters/Virtual Guy/Hit (32x32).png" type="Texture" id=5]
[ext_resource path="res://Pixel Adventure 1/Free/Main Characters/Virtual Guy/Fall (32x32).png" type="Texture" id=6]
[ext_resource path="res://Pixel Adventure 1/Free/Other/Shadow.png" type="Texture" id=7]
[ext_resource path="res://Pixel Adventure 1/Free/Other/Dust Particle.png" type="Texture" id=8]
[ext_resource path="res://GodotPlatformer2D/Sounds/jump1.ogg" type="AudioStream" id=9]
[ext_resource path="res://GodotPlatformer2D/Sounds/enemy_hit.wav" type="AudioStream" id=10]

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.538462, 0.942308 )
colors = PoolColorArray( 0.235294, 0.235294, 0.235294, 0, 1, 1, 1, 1, 1, 1, 1, 0.0901961 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.680982 ), 0.0, 0.0, 0, 0, Vector2( 0.982692, 0.484663 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
flag_disable_z = true
spread = 3.86
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
scale_random = 0.06
scale_curve = SubResource( 11 )
color_ramp = SubResource( 9 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.25, 9 )

[sub_resource type="Animation" id=6]
resource_name = "fall_play"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "hit_play"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_play"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump_play"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "run_play"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 11 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10.5, 10 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 10, 1.75 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 94
script = ExtResource( 1 )

[node name="effects" type="Particles2D" parent="."]
position = Vector2( -5, 9 )
rotation = 3.14159
scale = Vector2( 1, -1 )
emitting = false
lifetime = 0.7
one_shot = true
randomness = 0.7
process_material = SubResource( 12 )
texture = ExtResource( 8 )

[node name="Shadow" type="Sprite" parent="."]
visible = false
position = Vector2( 1, 10 )
rotation = 3.14159
scale = Vector2( 1, -0.370233 )
texture = ExtResource( 7 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
offset = Vector2( 0, -4 )
hframes = 12

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 1.25, 1 )
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/fall_play = SubResource( 6 )
anims/hit_play = SubResource( 2 )
anims/idle_play = SubResource( 3 )
anims/jump_play = SubResource( 4 )
anims/run_play = SubResource( 5 )

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 5, -20 )
current = true
limit_left = -113
limit_top = -526
limit_right = 5530
limit_bottom = 344
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 6.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="raycasts" type="Node2D" parent="."]
modulate = Color( 0.0392157, 0.886275, 0.929412, 1 )
position = Vector2( 1, 12 )

[node name="raycast" type="RayCast2D" parent="raycasts"]
position = Vector2( 4, -4 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 88

[node name="raycast2" type="RayCast2D" parent="raycasts"]
position = Vector2( -6, -4 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 88

[node name="hurt_box" type="Area2D" parent="."]
position = Vector2( 1, 0 )
collision_layer = 32
collision_mask = 2

[node name="shape" type="CollisionShape2D" parent="hurt_box"]
modulate = Color( 0.145721, 0, 0.746094, 1 )
position = Vector2( -0.5, 0 )
shape = SubResource( 7 )

[node name="left" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -16, 0 )
collision_mask = 2

[node name="right" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 2

[node name="head_shape" type="Area2D" parent="."]
collision_mask = 16

[node name="shape" type="CollisionShape2D" parent="head_shape"]
position = Vector2( 0, -11.25 )
shape = SubResource( 13 )

[node name="pushright" type="RayCast2D" parent="."]
cast_to = Vector2( 14, 0 )
collision_mask = 128

[node name="pushlefth" type="RayCast2D" parent="."]
cast_to = Vector2( -14, 0 )
collision_mask = 128

[node name="jump_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0

[node name="hitP_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0

[connection signal="area_entered" from="hurt_box" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="hurt_box" to="." method="_on_hurt_box_body_entered"]
[connection signal="body_entered" from="head_shape" to="." method="_on_head_shape_body_entered"]
